REFACTOR#1
removed entity classes
creating DTOS
refactoring repos, services