@@ -1,134 +1,125 @@
 package com.phrmSystem.phrmSystem.service.impl;
 
-import com.phrmSystem.phrmSystem.data.entity.Doctor;
+import com.phrmSystem.phrmSystem.data.entity.Role;
+import com.phrmSystem.phrmSystem.data.entity.User;
 import com.phrmSystem.phrmSystem.data.entity.DoctorSpecialization;
+import com.phrmSystem.phrmSystem.data.entity.DoctorAppointment;
 import com.phrmSystem.phrmSystem.data.repo.DoctorRepository;
-import com.phrmSystem.phrmSystem.data.repo.DoctorSpecializationRepository;
+import com.phrmSystem.phrmSystem.data.repo.RoleRepository;
+import com.phrmSystem.phrmSystem.dto.UserDTO;
+import com.phrmSystem.phrmSystem.mappers.UserMapper;
 import com.phrmSystem.phrmSystem.service.DoctorService;
-import com.phrmSystem.phrmSystem.exceptions.ResourceNotFoundException;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 
 import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class DoctorServiceImpl implements DoctorService {
 
     private final DoctorRepository doctorRepository;
-    private final DoctorSpecializationRepository specializationRepository;
+    private final RoleRepository roleRepository;
 
-//    private void validateDoctor(Doctor doctor) {
-//        if (!StringUtils.hasText(doctor.getUniqueId())) {
-//            throw new IllegalArgumentException("Doctor's unique ID cannot be blank.");
-//        }
-//        if (!StringUtils.hasText(doctor.getName())) {
-//            throw new IllegalArgumentException("Doctor's name cannot be blank.");
-//        }
-//        if (doctor.getSpecializations() == null || doctor.getSpecializations().isEmpty()) {
-//            throw new IllegalArgumentException("Doctor must have at least one specialization.");
-//        }
-//        // Ensure each specialization exists or is valid
-//        for (DoctorSpecialization specialization : doctor.getSpecializations()) {
-//            if (!StringUtils.hasText(specialization.getSpecialization())) {
-//                throw new IllegalArgumentException("Specialization name cannot be blank.");
-//            }
-//        }
-//        if (doctorRepository.findByUniqueId(doctor.getUniqueId()).isPresent()) {
-//            throw new IllegalStateException("A doctor with this unique ID already exists.");
-//        }
-//    }
-
-
-//    private void validateUpdatedDoctor(Doctor existingDoctor, Doctor updatedDoctor) {
-//        if (!StringUtils.hasText(updatedDoctor.getName())) {
-//            throw new IllegalArgumentException("Doctor's name cannot be blank.");
-//        }
-//        if (updatedDoctor.getSpecializations() == null || updatedDoctor.getSpecializations().isEmpty()) {
-//            throw new IllegalArgumentException("Doctor must have at least one specialization.");
-//        }
-//    }
-
-
-    @Override
-    public List<Doctor> getAllDoctors() {
-        return doctorRepository.findAll();
+    public DoctorServiceImpl(DoctorRepository doctorRepository, RoleRepository roleRepository) {
+        this.doctorRepository = doctorRepository;
+        this.roleRepository = roleRepository;
     }
 
     @Override
-    public Doctor getDoctorById(Long id) {
-        return doctorRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Doctor not found"));
-    }
+    public User createDoctor(User doctor) {
+        // Fetch the role from the database
+        Role doctorRole = roleRepository.findByRoleName("DOCTOR")
+                .orElseThrow(() -> new RuntimeException("Role DOCTOR not found"));
 
-    @Override
-    public Doctor createDoctor(Doctor doctor) {
-        doctor.setUniqueId(generateUniqueId());
-//        validateDoctor(doctor);
+        // Assign the existing role to the doctor
+        doctor.setRole(List.of(doctorRole));
 
-        // Persist specializations separately if needed
-        for (DoctorSpecialization specialization : doctor.getSpecializations()) {
-            if (specialization.getId() == 0) {
-                // Persist new specializations
-                specializationRepository.save(specialization);
-            }
+        // Validate required fields for doctors
+        if (doctor.getUniqueId() == null || doctor.getUniqueId().isEmpty()) {
+            throw new RuntimeException("Unique ID is required for doctors.");
         }
 
+        if (doctor.getIsPersonalDoctor() == null) {
+            throw new RuntimeException("Personal doctor status must be specified for doctors.");
+        }
+
+        // Save the doctor to the database
         return doctorRepository.save(doctor);
     }
 
 
-    private String generateUniqueId() {
-        // Generate a unique identifier with a prefix (e.g., "DOC") and a random numeric part
-        String prefix = "DOC";
-        String uniqueNumber = String.valueOf(System.currentTimeMillis() % 1_000_000); // Timestamp-based unique number
-        return prefix + uniqueNumber;
-    }
-
 
     @Override
-    public Doctor updateDoctor(Long id, Doctor updatedDoctor) {
-        Doctor existingDoctor = getDoctorById(id);
+    public User updateDoctor(Long doctorId, User updatedDoctor) {
+        // Fetch the existing doctor
+        User existingDoctor = doctorRepository.findById(doctorId)
+                .orElseThrow(() -> new RuntimeException("Doctor not found with ID: " + doctorId));
+
+        // Validate the updated doctor fields
+        if (updatedDoctor.getRole() == null || updatedDoctor.getRole().stream().noneMatch(role -> "DOCTOR".equals(role.getRoleName()))) {
+            throw new RuntimeException("Updated user must have a role of DOCTOR.");
+        }
+
+        // Update fields
+        existingDoctor.setFirstName(updatedDoctor.getFirstName());
+        existingDoctor.setLastName(updatedDoctor.getLastName());
         existingDoctor.setUniqueId(updatedDoctor.getUniqueId());
-        existingDoctor.setPersonalDoctor(updatedDoctor.isPersonalDoctor());
-        existingDoctor.setSpecializations(updatedDoctor.getSpecializations());
+        existingDoctor.setIsPersonalDoctor(updatedDoctor.getIsPersonalDoctor());
+
+        // Save and return the updated doctor
         return doctorRepository.save(existingDoctor);
     }
 
-
     @Override
-    public void deleteDoctor(Long id) {
-        if (!doctorRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Doctor with id " + id + " not found.");
+    public void deleteDoctor(Long doctorId) {
+        if (!doctorRepository.existsById(doctorId)) {
+            throw new RuntimeException("Doctor not found with ID: " + doctorId);
         }
-        doctorRepository.deleteById(id);
+        doctorRepository.deleteById(doctorId);
     }
 
     @Override
-    public List<Doctor> getDoctorsBySpecialization(String specialization) {
-        if (!StringUtils.hasText(specialization)) {
-            throw new IllegalArgumentException("Specialization cannot be blank.");
-        }
-        return doctorRepository.findBySpecialization(specialization);
-    }
-
-    public int countPatientsByDoctorId(Long doctorId) {
-        return doctorRepository.countPatientsByDoctorId(doctorId);
-    }
-
-    @Override
-    public List<Doctor> getPersonalDoctors() {
-        return doctorRepository.findByIsPersonalDoctor(true);
-    }
-
-    @Override
-    public List<Object[]> getDoctorsWithMostPatients() {
-        return doctorRepository.findAll() // Custom logic for most patients
+    public List<UserDTO> getAllDoctors() {
+        // Fetch doctors and map them to DTOs
+        return doctorRepository.findAllDoctors()
                 .stream()
-                .map(doctor -> new Object[]{doctor, countPatientsByDoctorId(doctor.getId())})
-                .sorted((o1, o2) -> Integer.compare((int) o2[1], (int) o1[1]))
-                .toList();
+                .map(UserMapper::toDTO)
+                .collect(Collectors.toList());
+    }
+
+
+    @Override
+    public User getDoctorById(Long id) {
+        return doctorRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Doctor not found with id: " + id));
+    }
+
+    @Override
+    public User getDoctorByUniqueId(String uniqueId) {
+        return doctorRepository.findDoctorByUniqueId(uniqueId);
+    }
+
+    @Override
+    public List<User> getAllPersonalDoctors() {
+        return doctorRepository.findAllPersonalDoctors();
+    }
+
+    @Override
+    public List<DoctorSpecialization> getDoctorSpecializations(Long doctorId) {
+        User doctor = getDoctorById(doctorId);
+        return List.copyOf(doctor.getSpecializations());
+    }
+
+    @Override
+    public List<DoctorAppointment> getDoctorAppointments(Long doctorId) {
+        User doctor = getDoctorById(doctorId);
+        return List.copyOf(doctor.getDoctorAppointments());
+    }
+
+    @Override
+    public User addSpecializationToDoctor(Long doctorId, DoctorSpecialization specialization) {
+        User doctor = getDoctorById(doctorId);
+        doctor.getSpecializations().add(specialization);
+        return doctorRepository.save(doctor);
     }
 }
